=head1 NAME

Badger::Changes - Summary of changes in the Badger toolkit

=head1 CHANGES

=head2 Version 0.04

Changed L<Badger::Factory> to pass C<$name> as an argument to various methods.

Moved a whole bunch of stuff out of L<Badger::Class> into C<Badger::Class::*>
modules.

Added L<Badger::Class::Config> for simple configuration.

Added L<hash()|Badger::Methods/hash()> method to L<Badger::Methods> and 
L<hash_methods|Badger::Class|hash_methods> hook to L<Badger::Class>.

Added L<trace()|Badger::Exception/trace> hook and related paraphernalia to
L<Badger::Exception>. Added the C<-t> / C<--trace> command line options to
L<Badger::Test> to enable it when running tests.  Also added C<-h> / C<--help>
options.

Added L<Codec()|Badger::Codecs/Codec()> exportable subroutine to 
L<Badger::Codecs>.

Added L<Badger::Codec::URL>.  It's similar to L<Badger::Codec::URI>,
but slightly different.  See the TT uri/url filters for the reason.

Changed the L<prototype()|Badger::Prototype/prototype()> method in
L<Badger::Prototype> to accept a single C<undef> value to clear any current
prototype. Also added the L<has_prototype()|Badger::Prototype/has_prototype()>
method.

=head2 Version 0.03

Added delegate loaders to L<Badger>.  This provides some semantic sugar
for loading a bunch of different C<Badger::*> modules in one go.

    use Badger
        Filesystem  => 'FS $Bin',
        Codecs      => 'storable base64',
        Debug       => {
            modules => 'My::Module',
        };

Added L<different()|Badger::Test::Manager/different()> to 
L<Badger::Test::Manager>.

Added L<textlike()|Badger::Utils/textlike()> to L<Badger::Utils>

Added the L<overload|Badger::Class/overload>
L<as_text|Badger::Class/as_text> and 
L<is_true|Badger::Class/is_true> import hooks and related method to
L<Badger::Class>.  These delegate to the C<overload> module.

Added the L<print|Badger::Filesystem::File/print()> method to 
L<Badger::Filesystem::File>.

Added support for 